--- a/collectionstyle.css
+++ b/collectionstyle.css
@@ -1,42 +1,37 @@
 /* For desktop */
 
 @media only screen and (min-width: 768px) {
-
-:root {
+  :root {
     --surface-color: rgba(24, 36, 87, 0.671);
     --curve: 40;
   }
 
-* {
+  * {
     box-sizing: border-box;
   }
 
   body {
-   background-color: rgb(30, 7, 39);
+    background-color: rgb(30, 7, 39);
   }
 
-  .header{
-   padding-bottom: 40px; 
-
+  .header {
+    padding-bottom: 40px;
   }
 
- .collection-title{
+  .collection-title {
     display: flex;
-    justify-content: center;   
-
-}
-  .myname{
-    color:white;
-    font-family: 'Yeseva One', cursive;
-
+    justify-content: center;
+  }
+  .myname {
+    color: white;
+    font-family: "Yeseva One", cursive;
   }
 
-  .genrefilter{
-  color:white;
-  display: flex;
-  justify-content: center;
-  font-family: 'Yeseva One', cursive;
-  
+  .genrefilter {
+    color: white;
+    display: flex;
+    justify-content: center;
+    font-family: "Yeseva One", cursive;
   }
   .cards {
     display: grid;
@@ -50,18 +45,18 @@
   .card {
     position: relative;
     display: block;
-    height: 100%;  
+    height: 100%;
     border-radius: calc(var(--curve) * 1px);
     overflow: hidden;
     text-decoration: none;
   }
 
-  .card:hover{
+  .card:hover {
     background: #500581;
     border: 10px solid rgb(30, 7, 39);
   }
-  
-  .card_image {      
+
+  .card_image {
     width: 100%;
     height: 100%;
   }
@@ -71,99 +66,90 @@
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 1;         
-    background-color: var(--surface-color);   
-    padding:15px;   
+    z-index: 1;
+    background-color: var(--surface-color);
+    padding: 15px;
     transform: translateY(100%);
-    transition: .2s ease-in-out;
+    transition: 0.2s ease-in-out;
   }
 
   .card:hover .card_overlay {
     transform: translateY(0);
   }
 
-
-  .lni{
-      display: flex !important;
-      color: red !important;
-      justify-content: center !important;
-      font-size: 30px !important;
-      border:none !important;
+  .lni {
+    display: flex !important;
+    color: red !important;
+    justify-content: center !important;
+    font-size: 30px !important;
+    border: none !important;
   }
 
-  .youtube{
-      text-decoration: none;
-
+  .youtube {
+    text-decoration: none;
   }
 
-  .card__header-text{
-      color:white;
-      font-family: 'Montserrat', sans-serif;
+  .card__header-text {
+    color: white;
+    font-family: "Montserrat", sans-serif;
   }
 
-  .description{
-      font-size: 13px;
-      color: white;
-      font-family: 'Montserrat', sans-serif;
+  .description {
+    font-size: 13px;
+    color: white;
+    font-family: "Montserrat", sans-serif;
   }
-  
-  .filter{
+
+  .filter {
     display: flex;
     justify-content: center;
-    gap:40px;
-
+    gap: 40px;
   }
 
-  label{
-      color: white;
-      font-family: 'Montserrat', sans-serif;
+  label {
+    color: white;
+    font-family: "Montserrat", sans-serif;
   }
 
-  [type=checkbox] {
+  [type="checkbox"] {
     width: 1rem;
     height: 1rem;
     vertical-align: middle;
     cursor: pointer;
-     
   }
-  
-  
 }
 
 /* For mobile */
-@media only screen and (max-width: 768px) {
 
+@media only screen and (max-width: 768px) {
   :root {
     --surface-color: rgba(24, 36, 87, 0.671);
     --curve: 40;
   }
 
-* {
+  * {
     box-sizing: border-box;
   }
 
   body {
-   background-color: rgb(30, 7, 39);
+    background-color: rgb(30, 7, 39);
   }
 
-
- .collection-title{
+  .collection-title {
     display: flex;
     justify-content: center;
-
-}
-  .myname{
+  }
+  .myname {
     margin-left: 4rem;
-    color:white;
-    font-family: 'Yeseva One', cursive;
-
+    color: white;
+    font-family: "Yeseva One", cursive;
   }
 
-  .genrefilter{
-  color:white;
-  display: flex;
-  justify-content: center;
-  font-family: 'Yeseva One', cursive;
+  .genrefilter {
+    color: white;
+    display: flex;
+    justify-content: center;
+    font-family: "Yeseva One", cursive;
   }
 
   .cards {
@@ -178,13 +164,13 @@
   .card {
     position: relative;
     display: block;
-    height: 100%;  
+    height: 100%;
     border-radius: calc(var(--curve) * 1px);
     overflow: hidden;
     text-decoration: none;
   }
 
-  .card_image {      
+  .card_image {
     width: 100%;
     height: 100%;
   }
@@ -194,53 +180,46 @@
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 1;         
-    background-color: var(--surface-color);   
-    padding:15px;   
+    z-index: 1;
+    background-color: var(--surface-color);
+    padding: 15px;
     transform: translateY(100%);
-    transition: .2s ease-in-out;
+    transition: 0.2s ease-in-out;
   }
   .card:hover .card_overlay {
     transform: translateY(0);
   }
-  
 
-  .lni{
-      display: flex !important;
-      color: red !important;
-      justify-content: center !important;
-      font-size: 30px !important;
-      border:none !important;
+  .lni {
+    display: flex !important;
+    color: red !important;
+    justify-content: center !important;
+    font-size: 30px !important;
+    border: none !important;
   }
 
-  .youtube{
-      text-decoration: none;
-
+  .youtube {
+    text-decoration: none;
   }
 
-  .card__header-text{
-      color:white;
+  .card__header-text {
+    color: white;
   }
 
-  .description{
-      font-size: 13px;
-      color: white;
+  .description {
+    font-size: 13px;
+    color: white;
   }
-  
-  .filter{
+
+  .filter {
     flex-wrap: wrap;
     flex-direction: column;
     align-content: flex-start;
     align-items: flex-start;
     padding: 43px;
-
   }
-  label{
-      color: white;
-      font-family: 'Montserrat', sans-serif;
+  label {
+    color: white;
+    font-family: "Montserrat", sans-serif;
   }
-  
 }
-
-
-
