--- a/collectionstyle.css
+++ b/collectionstyle.css
@@ -8,31 +8,46 @@
 
   * {
     box-sizing: border-box;
+
   }
 
   body {
-    background-color: rgb(30, 7, 39);
+    background: linear-gradient(89.88deg, #0575E6 0.1%, #021B79 98.2%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
   .header {
-    padding-bottom: 40px;
+    margin: 1em;
+    padding: 20px;
+    background: rgba(255, 255, 255, 0.15);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(4.5px);
+    -webkit-backdrop-filter: blur(4.5px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    width: 50vw;
   }
 
   .collection-title {
     display: flex;
     justify-content: center;
   }
+
   .myname {
     color: white;
-    font-family: "Yeseva One", cursive;
+    font-family: 'Neucha', cursive;
   }
 
   .genrefilter {
     color: white;
     display: flex;
     justify-content: center;
-    font-family: "Yeseva One", cursive;
+    font-family: 'Neucha', cursive;
   }
+
   .cards {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -52,8 +67,8 @@
   }
 
   .card:hover {
-    background: #500581;
-    border: 10px solid rgb(30, 7, 39);
+    background: transparent;
+    border: 10px solid #1d317437;
   }
 
   .card_image {
@@ -117,6 +132,10 @@
     vertical-align: middle;
     cursor: pointer;
   }
+
+  .check {
+    font-family: 'Neucha', cursive;
+  }
 }
 
 /* For mobile */
@@ -132,24 +151,36 @@
   }
 
   body {
-    background-color: rgb(30, 7, 39);
+    background-color: #0575E6;
+  }
+
+  .header {
+    margin: 1em;
+    background: rgba(255, 255, 255, 0.15);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(4.5px);
+    -webkit-backdrop-filter: blur(4.5px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    width: 100%;
   }
 
   .collection-title {
     display: flex;
     justify-content: center;
   }
+
   .myname {
     margin-left: 4rem;
     color: white;
-    font-family: "Yeseva One", cursive;
+    font-family: 'Neucha', cursive;
   }
 
   .genrefilter {
     color: white;
     display: flex;
     justify-content: center;
-    font-family: "Yeseva One", cursive;
+    font-family: 'Neucha', cursive;
   }
 
   .cards {
@@ -186,6 +217,7 @@
     transform: translateY(100%);
     transition: 0.2s ease-in-out;
   }
+
   .card:hover .card_overlay {
     transform: translateY(0);
   }
@@ -218,6 +250,7 @@
     align-items: flex-start;
     padding: 43px;
   }
+
   label {
     color: white;
     font-family: "Montserrat", sans-serif;
